--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "id": "4d94b4e1-c1b4-402d-952a-e1bc6d1fc64b",
   "name": "Alan-Sandbox-Project-01",
-  "publisher": "Alan of FL erp",
-  "version": "1.0.0.0",
+  "publisher": "Alan",
+  "version": "1.0.0.1",
   "brief": "",
   "description": "",
   "privacyStatement": "",
